@@ -14,8 +14,9 @@ import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.event.Listener;
+import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class SetHeroCommand extends Command {
 
@@ -23,19 +24,19 @@ public class SetHeroCommand extends Command {
         super("setCharacter");
         setDescription("Set your character");
         setUsage("/setCharacter <characterName>");
-        this.setAliases(Arrays.asList("hero"));
+        this.setAliases(List.of("hero"));
     }
 
     @Override
-    public boolean execute(CommandSender sender, String commandLabel, String[] args) {
-        if (sender instanceof Player) {
-            Player player = (Player) sender;
+    public boolean execute(@NotNull CommandSender sender, @NotNull String commandLabel, String[] args) {
+        if (sender instanceof Player player) {
             if (args.length > 0) {
                 String characterName = args[0];
                 Hero hero = null;
 
                 if(GameManager.isPlayerInGame(player)){
-                    player.sendMessage(Component.text(NamedTextColor.RED + "You cannot change characters while in a game!"));
+                    player.sendMessage(Component.text("You cannot change characters while in a game!", NamedTextColor.RED));
+                    return false;
                 }
 
                 // Initialize character based on arguments
@@ -45,15 +46,19 @@ public class SetHeroCommand extends Command {
                     ((VoidCrawler) hero).updateAttackDamage();
                     //Bukkit.getPluginManager().registerEvents((Listener) hero, Heroes.getInstance());
                 } else if (characterName.equalsIgnoreCase("Bulk")) {
+                    player.sendMessage(Component.text("Hero not yet supported", NamedTextColor.RED));
                     //hero = new Bulk(player);
                 } else if (characterName.equalsIgnoreCase("Bug")) {
                     hero = new Bug(player);
                     player.playSound(player.getLocation(), Sound.ENTITY_PARROT_IMITATE_SILVERFISH, 2.0f, 1.0f);
                 } else if (characterName.equalsIgnoreCase("Spooderman")) {
+                    player.sendMessage(Component.text("Hero not yet supported", NamedTextColor.RED));
                     //hero = new Spooderman(player);
                 } else if (characterName.equalsIgnoreCase("Punishgers")) {
+                    player.sendMessage(Component.text("Hero not yet supported", NamedTextColor.RED));
                     //hero = new Punishgers(player);
                 } else if (characterName.equalsIgnoreCase("Blud")) {
+                    player.sendMessage(Component.text("Hero not yet supported", NamedTextColor.RED));
                     //hero = new Blud(player);
                 } else if (characterName.equalsIgnoreCase("Shoop")) {
                     hero = new Shoop(player);
